--- a/Android/SpreadCubes/app/src/main/res/layout/activity_main.xml
+++ b/Android/SpreadCubes/app/src/main/res/layout/activity_main.xml
@@ -10,15 +10,16 @@
         android:id="@+id/btnSpread"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Spread"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginTop="16dp"
+        android:onClick="clickButton"
+        android:text="Spread"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn1"
