--- a/Android/FirebaseMessage/app/src/main/res/layout/item_friend_list.xml
+++ b/Android/FirebaseMessage/app/src/main/res/layout/item_friend_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textName"
+        android:id="@+id/textMsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -26,5 +26,5 @@
         android:text="email address"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textName" />
+        app:layout_constraintTop_toBottomOf="@+id/textMsg" />
 </android.support.constraint.ConstraintLayout>
